added creation and upload of test results

--- a/pdf2htmlEX/CMakeLists.txt
+++ b/pdf2htmlEX/CMakeLists.txt
@@ -262,6 +262,7 @@ set(PDF2HTMLEX_TMPDIR /tmp/pdf2htmlEX/tmp)
 set(PDF2HTMLEX_DATDIR /tmp/pdf2htmlEX/dat)
 set(PDF2HTMLEX_PNGDIR /tmp/pdf2htmlEX/png)
 set(PDF2HTMLEX_OUTDIR /tmp/pdf2htmlEX/out)
+set(PDF2HTMLEX_HTMDIR /tmp/pdf2htmlEX/html)
 file(MAKE_DIRECTORY ${PDF2HTMLEX_TMPDIR})
 file(MAKE_DIRECTORY ${PDF2HTMLEX_DATDIR})
 file(MAKE_DIRECTORY ${PDF2HTMLEX_PNGDIR})
