--- a/pdf2htmlEX/pdf2htmlEX.1.in
+++ b/pdf2htmlEX/pdf2htmlEX.1.in
@@ -175,6 +175,10 @@ Specify the format of fonts extracted from the PDF file.
 Decompose ligatures. For example 'fi' \-> 'f''i'.
 
 .TP
+.B \-\-turn\-off\-ligatures <0|1> (Default: 0)
+Explicitly tell browsers not to use ligatures.
+
+.TP
 .B \-\-auto\-hint <0|1> (Default: 0)
 If set to 1, hints will be generated for the fonts using FontForge. 
 
