--- a/pdf2htmlEX/share/pdf2htmlEX.js.in
+++ b/pdf2htmlEX/share/pdf2htmlEX.js.in
@@ -342,20 +342,16 @@ Viewer.prototype = {
       for (var i = 0; i < images.length; i++) {
         var image = images[i];
         (function(image) {
-          image.addEventListener('load', function() {
+          image.addEventListener('error', function() {
             console.debug('image load error, retry in 1s', image);
             setTimeout(function() {
               console.debug('retrying image load', image);
-              var tmp = image.src;
-              image.src = '';
-              image.src = tmp;
+              image.src = image.src;
             }, 1000);
           });
         })(image);
         console.debug('image reload', image);
-        var tmp = image.src;
-        image.src = '';
-        image.src = tmp;
+        image.src = image.src;
       }
     }
   },
